# k8s-agents-strands

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  NOTICE  README.ko.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
deploy/agentcore/: Dockerfile  README.md  cdk_stack.py  eks-rbac.yaml  iam-execution-policy.json  resource-policy.json
docs/: 00-references.ko.md  00-references.md  01-getting-started.ko.md  01-getting-started.md  02-architecture.ko.md  02-architecture.md  03-development.ko.md  03-development.md  04-deployment-agentcore.ko.md  04-deployment-agentcore.md  05-code-style.md  06-security-and-load.md  07-runbook.md
src/k8s_rca_agent/: agentcore_app.py  main.py
src/k8s_rca_agent/agents/: __init__.py  orchestrator.py  pod_diagnostic.py
src/k8s_rca_agent/domain/: models.py  validation.py
src/k8s_rca_agent/infrastructure/: container.py  mcp_client.py  metrics.py  redaction.py
src/k8s_rca_agent/tools/: __init__.py
tests/: test_agentcore_app.py
tests/agents/: test_factory.py
tests/domain/: test_models.py  test_validation.py
tests/infrastructure/: test_mcp_client.py  test_metrics.py  test_redaction.py
