[project]
name = "k8s-rca-agent"
version = "0.1.0"
description = "Kubernetes RCA agent built with Strands Agents SDK + EKS MCP Server, deployed on Amazon Bedrock AgentCore Runtime"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=0.1.0",
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
agentcore = [
    "bedrock-agentcore>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
k8s-rca = "k8s_rca_agent.main:main"
k8s-rca-agentcore = "k8s_rca_agent.agentcore_app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
